--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,33 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.microsoft.azure</groupId>
+                <artifactId>azure-webapp-maven-plugin</artifactId>
+                <version></version>
+                <configuration>
+                    <schemaVersion>v2</schemaVersion>
+                    <resourceGroup>maven-plugin</resourceGroup>
+                    <appName>vitallsolutions</appName>
+                    <region>East US</region>
+                    <runtime>
+                        <os>linux</os>
+                        <javaVersion>jre8</javaVersion>
+                        <webContainer></webContainer>
+                    </runtime>
+                    <deployment>
+                        <resources>
+                            <resource>
+                                <directory>${project.basedir}/target</directory>
+                                <includes>
+                                    <include>*.jar</include>
+                                </includes>
+                            </resource>
+                        </resources>
+                    </deployment>
+                    <pricingTier>F1</pricingTier>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <repositories>
