--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
+
+#Azure
+server.forward-headers-strategy=FRAMEWORK
