--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,21 @@ okta.oauth2.postLogoutRedirectUri = http://localhost:8080/
 okta.oauth2.groups-claim = groups
 
 spring.thymeleaf.cache = false
-spring.datasource.url = jdbc:mariadb://localhost:3306/vitallsolutions
-spring.datasource.username = root
-spring.datasource.password = root
-spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto = update
+
+logging.level.org.hibernate.SQL=DEBUG
+
+spring.datasource.url=jdbc:mysql://$AZ_DATABASE_NAME.mysql.database.azure.com:3306/demo?serverTimezone=UTC
+spring.datasource.username=spring@$AZ_DATABASE_NAME
+spring.datasource.password=$AZ_MYSQL_PASSWORD
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.url = jdbc:mariadb://localhost:3306/vitallsolutions
+#spring.datasource.username = root
+#spring.datasource.password = root
+#spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto = update
 
 #Azure
 server.forward-headers-strategy=FRAMEWORK
