--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.thymeleaf.cache = false
 
 logging.level.org.hibernate.SQL=DEBUG
 
-spring.datasource.url=jdbc:mysql://$AZ_DATABASE_NAME.mysql.database.azure.com:3306/vitallsolutions?serverTimezone=UTC
-spring.datasource.username=spring@$AZ_DATABASE_NAME
-spring.datasource.password=$AZ_MYSQL_PASSWORD
+spring.datasource.url=jdbc:mysql://vitallsolutions.mysql.database.azure.com:3306/vitallsolutions?serverTimezone=UTC
+spring.datasource.username=spring@vitallsolutions
+spring.datasource.password=Hy@1992per
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
