--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.thymeleaf.cache = false
 
 logging.level.org.hibernate.SQL=DEBUG
 
-spring.datasource.url=jdbc:mysql://vitallsolutions.mysql.database.azure.com:3306/vitallsolutions?serverTimezone=UTC
-spring.datasource.username=spring@vitallsolutions
+#spring.datasource.url=jdbc:mysql://vitallsolutions.mysql.database.azure.com:3306/vitallsolutions?serverTimezone=UTC
+#spring.datasource.username=spring@vitallsolutions
 spring.datasource.password=Hy@1992per
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
