--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ logging.level.org.hibernate.SQL=DEBUG
 #spring.datasource.url=jdbc:mysql://vitallsolutions.mysql.database.azure.com:3306/vitallsolutions?serverTimezone=UTC
 #spring.datasource.username=spring@vitallsolutions
 spring.datasource.password=Hy@1992per
+spring.cloud.gcp.sql.database-name=vitall-solutions-database
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
