--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ logging.level.org.hibernate.SQL=DEBUG
 #spring.datasource.username=spring@vitallsolutions
 spring.datasource.password=Hy@1992per
 spring.cloud.gcp.sql.database-name=vitall-solutions-database
+spring.cloud.gcp.sql.instance-connection-name=vitall-solutions:eastus:vitall-solutions-database
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
