--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ okta.oauth2.postLogoutRedirectUri = http://localhost:8080/
 okta.oauth2.groups-claim = groups
 
 spring.thymeleaf.cache = false
-
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.hibernate.SQL=DEBUG
 
 #spring.datasource.url=jdbc:mysql://vitallsolutions.mysql.database.azure.com:3306/vitallsolutions?serverTimezone=UTC
