--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ okta.oauth2.issuer = https://dev-59443207.okta.com/oauth2/default
 okta.oauth2.client-id = 0oa5q42t74CCZOszd5d7
 okta.oauth2.client-secret =  qHNPK0-HR4_jph-Lz3XHKwdWqugebKqTS7JCKord
 okta.oauth2.redirect-uri = /login/oauth2/code/okta
-okta.oauth2.postLogoutRedirectUri = http://localhost:8080/
+okta.oauth2.postLogoutRedirectUri = http://www.vitallsolutions.com
 okta.oauth2.groups-claim = groups
 
 spring.thymeleaf.cache = false
