--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,8 @@
 steps:
   - name: 'gcr.io/cloud-builders/mvn'
-    args: ['install']
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/vitall-solutions/vitallsolutions', '.']
+    args: [ 'install' ]
+  - name: gcr.io/cloud-builders/docker
+    args: ['build', '-t', 'gcr.io/vitall-solutions/vitallsolutions', '--build-arg=JAR_FILE=target/vis-artificat', '.']
+images: ['gcr.io/vitall-solutions/vitallsolutions']
 options:
   logging: CLOUD_LOGGING_ONLY
