--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ logging.level.org.hibernate.SQL=DEBUG
 spring.datasource.password=Hy@1992per
 spring.cloud.gcp.sql.database-name=vitallsolutions
 spring.cloud.gcp.sql.instance-connection-name=vitall-solutions:europe-west4:vitall-solutions-database
+spring.cloud.gcp.credentials.location=classpath:C:/Users/Joop/Downloads/vitall-solutions-4623b203ca5c.json
+spring.cloud.gcp.project-id=vitall-solutions
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
