--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,28 +4,26 @@ okta.oauth2.client-secret =  qHNPK0-HR4_jph-Lz3XHKwdWqugebKqTS7JCKord
 okta.oauth2.redirect-uri = /login/oauth2/code/okta
 okta.oauth2.postLogoutRedirectUri = http://www.vitallsolutions.com
 okta.oauth2.groups-claim = groups
-
 spring.thymeleaf.cache = false
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-logging.level.org.hibernate.SQL=DEBUG
+spring.thymeleaf.prefix = classpath:templates/
 
-#spring.datasource.url=jdbc:mysql://vitallsolutions.mysql.database.azure.com:3306/vitallsolutions?serverTimezone=UTC
-#spring.datasource.username=spring@vitallsolutions
-spring.datasource.password=Hy@1992per
-spring.cloud.gcp.sql.database-name=vitallsolutions
-spring.cloud.gcp.sql.instance-connection-name=vitall-solutions:europe-west4:vitall-solutions-database
-#spring.cloud.gcp.credentials.location=classpath:C:/Users/Joop/Downloads/vitall-solutions-4623b203ca5c.json
-#spring.cloud.gcp.project-id=vitall-solutions
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+#Google cloud config
+#spring.datasource.password=Hy@1992per
+#spring.cloud.gcp.sql.database-name=vitallsolutions
+#spring.cloud.gcp.sql.instance-connection-name=vitall-solutions:europe-west4:vitall-solutions-database
+#server.forward-headers-strategy=FRAMEWORK
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#logging.level.org.hibernate.SQL=DEBUG
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create-drop
 
-#spring.datasource.url = jdbc:mariadb://localhost:3306/vitallsolutions
-#spring.datasource.username = root
-#spring.datasource.password = root
-#spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto = update
+#Local config
+spring.datasource.url = jdbc:mariadb://localhost:3306/vitallsolutions
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto = create-drop
 
 #Azure
-server.forward-headers-strategy=FRAMEWORK
+
