--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,6 @@ spring.datasource.password=Hy@1992per
 spring.cloud.gcp.sql.database-name=vitallsolutions
 spring.cloud.gcp.sql.instance-connection-name=vitall-solutions:europe-west4:vitall-solutions-database
 server.forward-headers-strategy=FRAMEWORK
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -24,4 +23,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #spring.datasource.password = root
 #spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto = create-drop
+
+#Azure
 
