--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.cloud.gcp.sql.instance-connection-name=vitall-solutions:europe-west4:vita
 server.forward-headers-strategy=FRAMEWORK
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 #Local config
 #spring.datasource.url = jdbc:mariadb://localhost:3306/vitallsolutions
