--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ okta.oauth2.redirect-uri = /login/oauth2/code/okta
 okta.oauth2.postLogoutRedirectUri = http://www.vitallsolutions.com
 okta.oauth2.groups-claim = groups
 spring.thymeleaf.cache = false
-spring.thymeleaf.prefix = classpath:templates/
+spring.thymeleaf.prefix = classpath://templates
 
 
 #Google cloud config
