--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,11 @@ okta.oauth2.redirect-uri = /login/oauth2/code/okta
 okta.oauth2.postLogoutRedirectUri = http://www.vitallsolutions.com
 okta.oauth2.groups-claim = groups
 spring.thymeleaf.cache = false
-spring.thymeleaf.prefix = classpath://templates
+
 
 
 #Google cloud config
+spring.thymeleaf.prefix = classpath://templates
 spring.datasource.password=Hy@1992per
 spring.cloud.gcp.sql.database-name=vitallsolutions
 spring.cloud.gcp.sql.instance-connection-name=vitall-solutions:europe-west4:vitall-solutions-database
@@ -17,12 +18,10 @@ logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-#Local config
+##Local config
 #spring.datasource.url = jdbc:mariadb://localhost:3306/vitallsolutions
 #spring.datasource.username = root
 #spring.datasource.password = root
 #spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto = create-drop
-
-#Azure
 
