--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -11,5 +11,5 @@ spring.datasource.url = jdbc:mariadb://localhost:3306/vitallsolutions
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 
